--- a/Shatter/Shatter.csproj
+++ b/Shatter/Shatter.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{8A17CE9F-BF9B-4D39-B824-87299C617786}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExampleMod</RootNamespace>
-    <AssemblyName>ExampleMod</AssemblyName>
+    <RootNamespace>Shatter</RootNamespace>
+    <AssemblyName>Shatter</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -45,17 +45,34 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TECNetUnity">
+      <HintPath>Libraries\TECNetUnity.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>Libraries\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.AudioModule">
+      <HintPath>Libraries\UnityEngine.AudioModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>Libraries\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.ImageConversionModule">
+      <HintPath>Libraries\UnityEngine.ImageConversionModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.SharedInternalsModule">
+      <HintPath>Libraries\UnityEngine.SharedInternalsModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands.cs" />
+    <Compile Include="Commands\Config.cs" />
+    <Compile Include="Commands\Level.cs" />
+    <Compile Include="Commands\Multiplayer.cs" />
     <Compile Include="OnLoad.cs" />
-    <Compile Include="Patches.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="Patches\MarbleController\MarbleControllerIsReadyToWinPatch.cs" />
+    <Compile Include="Patches\MarbleController\MarbleControllerProcessEndPadPatch.cs" />
+    <Compile Include="Patches\MPVoting\MPVotingVoteSelectedPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
